--- a/week7/css/main.css
+++ b/week7/css/main.css
@@ -5,6 +5,26 @@ body {
     background-image: url(../images/white_brick_wall.png) ;
 }
 
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+img {
+    width: 100%;
+}
+
+/*  display and box-sizing */
+nav ul li {
+    display: inline-block;
+    width: 49%;
+    padding: 1em;
+    box-sizing: border-box;
+}
+nav ul a {
+    display: block;
+}
+
 /*  This is a CSS comment ( CTRL + / ) */
 h1 {
     color: peru;
@@ -31,8 +51,17 @@ nav ul a {
     color: inherit;
     text-decoration: none;
 }
+.orange-link.large-text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 /*  selecting element with ID value */
 #treatofweek {
+    
+    /* when using position absolute parent element must use position relative */
+    position: relative;
+   
     /* color image repeat position x position y / size */
     background: orange url(../images/bread.jpg) no-repeat center center;
     background-size: cover;
@@ -51,6 +80,27 @@ width: 50vw;
     background-color: darkslategrey;
     color: orange;
     text-decoration: none;
+    padding: 1.5em;
+    display: block;
+    width: 200px;
+}
+
+article,
+aside {
+    width: 80%;
+    background-color: rgba(255,255, 255, 0.6);
+    border: 1px solid;
+    padding: 1.5em;
+    box-sizing: border-box;
+    float: left;
+}
+
+aside {
+    width: 20%;
+}
+/*  clear float for the sections */
+section {
+    clear: both;
 }
 
 .large-text {
@@ -162,3 +212,20 @@ footer {
   footer.site-footer {
     background-color: teal;
   }
+
+/*  css box model */
+
+section h3 {
+    background-color: cornflowerblue;
+    padding: 1em;
+    width: 50%;
+}
+
+section p {
+    width: 50%;
+    /* top-bottom left-right */
+    padding: 1em .5em;
+    /* top right bottom left */
+    margin: -2em 2em 2em 2em;
+    border-bottom: 2px dashed black;
+}
