--- a/week10/css/main.css
+++ b/week10/css/main.css
@@ -147,6 +147,40 @@ p {
     text-transform: uppercase;
     text-align: center;
 }
+/* Navigation */
+
+.nav-list li {
+    border-bottom: 1px solid grey;
+    text-align: center;
+
+}
+
+.nav-list a,
+.nav-list a:link,
+.nav-list a:visited {
+    display: block;
+    padding: 1em 0;
+    text-decoration: none;
+}
+
+.nav-list a:hover,
+.nav-list a:focus,
+.nav-list a.current{
+    background-color: #00add8;
+    color: inherit;
+}
+/*  simple actions section */
+.actions-list {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.actions-list li {
+    max-width: 50%;
+    padding: 1em;
+    text-align: center;
+    font-size: 1.5rem;
+}
 
 /* ========= Mobile App section ======== */
 .btn {
@@ -202,6 +236,21 @@ p {
     .banner h1 {
         color: white;
     }
+
+    na-list {
+        display: flex;
+    }
+
+    .nav-list li{
+        flex: 1;
+        border: none;
+        border-right: 1px solid grey;
+    }
+
+    .nav-list li:last-child {
+        border: none;
+    }
+
     /* APP Section */
     .app img{
         width: 40%;
@@ -215,3 +264,6 @@ p {
     /*  add clearfix to the parent */
     
 }
+
+/* media qu */
+
