--- a/week11/css/main.css
+++ b/week11/css/main.css
@@ -210,6 +210,28 @@ p {
     text-align: right;
 }
 
+/* ============================
+        Climate action page
+================================= */
+
+.card {
+    border: 1px solid #00add8;
+    border-radius: 4px;
+    margin-bottom: 1em;
+}
+.card .info {
+    padding: 1em;
+}
+.card h3 {
+    margin-top: 0;
+}
+/* News section */
+
+.news {
+    border-top:  2px solid #00add8 ;
+    margin-top: 4em;
+}
+
 /* ==========================================================================
                             Desktop styles
     ========================================================================= */
@@ -265,5 +287,21 @@ p {
     
 }
 
-/* media qu */
-
+/* media query 800px */
+@media screen and (min-width:800px) {
+    .actions-list li{
+        max-width: 20%;
+    }
+    .cards {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1em;
+    }
+    /* news section */
+    .news {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, auto);
+        grid-template-areas: "head head" "left right1" "left right2";
+    }
+}
